--- a/assets/css/index-styles.css
+++ b/assets/css/index-styles.css
@@ -3,81 +3,73 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-image: linear-gradient(to right, rgb(11, 2, 67), rgb(249, 87, 167));;
     color: #333;
 }
 
 header {
-    background: #333;
     color: white;
-    text-align: left;
-    padding: 20px;
+    text-align: center;
 }
 
+header img {
+    padding-top: 1%;
+    width: 10%;
+    border-radius: 50%;
+  }
 nav {
-    background: #444;
-    padding: 10px;
-    text-align: left;
-}
-
-nav ul {
+    padding: 1%;
+    text-align: center;
+  }
+  
+  nav ul {
     list-style: none;
     padding: 0;
-}
-
-nav ul li {
+    margin: 0;
+  }
+  
+  nav ul li {
     display: inline;
     margin: 0 15px;
-}
-
-nav a {
+  }
+  
+  nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-}
+    transition: color 0.3s ease;
+  }
+  
+  nav a:hover {
+    color: rgb(254, 38, 162);
+  }
 
-nav a:hover {
-    color: #f4a261;
-}
+  .hero {
+    min-height: 50px;
+    height: 300px;
+    max-height: 720px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
 
+.hero p{
+    font-size: 100px;
+}
+  
 main {
     max-width: 900px;
     margin: 20px auto;
     padding: 20px;
-    background: white;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: white;
 }
 
 section {
     margin-bottom: 20px;
-}
-
-h2 {
-    border-bottom: 2px solid #f4a261;
-    padding-bottom: 5px;
-}
-
-#perfil {
-    max-width: 20%;
-    border-radius: 40%;
-}
-
-#proyecto2{
-    text-align: center;
-}
-
-#umbrella{
-    max-width: 25%;
-    max-height: 25%;
-    border-radius: 10%;
-}
-
-#gilfriends{
-
-    max-width: 20%;
-    max-height: 30%;
-    border-radius: 10%;
 }
 
 ul {
@@ -91,13 +83,7 @@ p{
     text-align: left;
 }
 
-
-footer {
-    text-align: center;
-    padding: 10px;
-    background: #333;
+footer p{
     color: white;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+    text-align: center;
 }
