--- a/assets/css/index-styles.css
+++ b/assets/css/index-styles.css
@@ -1,25 +1,26 @@
+:root{
+  --bg-color: linear-gradient(to right, rgb(11, 2, 67), rgb(249, 87, 167));
+  --second-bg-color: linear-gradient(to right,  rgb(249, 87, 167), rgb(11, 2, 67));
+  --main-color: rgb(11, 2, 67);
+  --text-color: white;
+}
+
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(to right, rgb(11, 2, 67), rgb(249, 87, 167));;
-    color: #333;
+    background-image: linear-gradient(to right, rgb(11, 2, 67), rgb(249, 87, 167));
 }
 
 header {
     color: white;
-    text-align: center;
+    text-align: left;
 }
 
-header img {
-    padding-top: 1%;
-    width: 10%;
-    border-radius: 50%;
-  }
 nav {
     padding: 1%;
-    text-align: center;
+    text-align: left;
   }
   
   nav ul {
@@ -44,46 +45,170 @@ nav {
     color: rgb(254, 38, 162);
   }
 
-  .hero {
-    min-height: 50px;
-    height: 300px;
-    max-height: 720px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 150px;
-    padding-bottom: 150px;
+  @media (max-width:995px){
+    .navbar{
+      position: absolute;
+      top: 100%;
+      right: 0;
+      width: 40%;
+      border-left: 3px solid var(--main-color);
+      border-bottom: 3px solid var(--main-color);
+      border-bottom-left-radius: 2rem;
+      border-top: 0.1rem solid;
+      display: none;
+    }
   }
 
-.hero p{
-    font-size: 100px;
-}
+  section{
+    min-height: 100vh;
+    padding: 5rem 9% 5rem;
+  }
+
+  .home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    background-color: var(--bg-color);
+  }
+
+  .home .home-content h1{
+    font-size:  5rem;
+    font-weight: 700;
+    line-height: 1.3;
+
+  }
+  span{
+    color: var(--main-color);
+  }
+
+  .home-img {
+    border-radius: 50%;
+  }
+
+  .home-content h3{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+  }
+
+  .home-img img{
+    position: relative;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px solid var(--main-color);
+    cursor: pointer;
+  }
+
+  .home img:hover{
+    transform: scale(1.01);
+    filter: drop-shadow( 0 0 25px var(--main-color));
+  }
+
+  .home-content p{
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
   
-main {
-    max-width: 900px;
-    margin: 20px auto;
-    padding: 20px;
-    border-radius: 8px;
+  .social-icon a{
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    width: 4rem;
+    height: 4rem;
+    background-color: transparent;
+    border: 0.2rem solid var(--main-color);
+    color: var(--text-color);
+    margin: 3rem 1.5rem 3rem 0;
+    transition: 0.3s ease;
+    border-radius: 50%;
+    font-size: 2rem;
+  }
+  .social-icon a:hover{
+    color: pink;
+    transform: scale(1.3)translateY(-5px);
+    background: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    border: 2px solid var(--main-color);
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    transition: 0.3s ease;
+    cursor: pointer;
+  }
+
+  .btn:hover{
+    transform: scale(1.03);
+    background-color: var(--main-color);
     color: white;
-}
+    box-shadow: 0 0 25px var(--main-color);
+  }
 
-section {
-    margin-bottom: 20px;
-}
+  .typing-text{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+  }
 
-ul {
-    padding-left: 20px;
-}
-p{
-    text-align: left;
-}
+  .typing-text span{
+    position: relative;
+  }
+  .typing-text span::before{
+    content: 'Software Dev';
+    color: var(--text-color);
+  }
+  
+  .education{
+    background: var(--second-bg-color);
+  }
+  .education .timeline{
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .education .timeline::after{
+    content: '';
+    position: absolute;
+    width: 6px;
+    background: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+    z-index: -2px;
+  }
+  .education .container{
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+  .education .container::after{
+    content: '\f501';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    right: -17px;
+    background-color: white;
+  }
 
-.content{
-    text-align: left;
-}
+  main {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 8px;
+      color: white;
+  }
 
-footer p{
-    color: white;
-    text-align: center;
-}
+  footer p{
+      color: white;
+      text-align: center;
+  }
