--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Personal</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Nicolas Lagos, estudiante de Técnico Universitario en Informática. Muestra proyectos en desarrollo web y habilidades en HTML5, CSS3, JavaScript, y React.js." />
+        <title>Portfolio de Nicolas Lagos - Desarrollador Web | Diseño Web y Programación</title>
+        <meta name="robots" content="index, follow">
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Nicolas Lagos",
+            "jobTitle": "Desarrollador Web",
+            "url": "https://www.ejemplo.com",
+            "image": "https://www.ejemplo.com/imagen.jpg",
+            "description": "Estudiante de Técnico Universitario en Informática con pasión por el diseño web y desarrollo frontend."
+        }
+        </script>
+        <link rel="stylesheet" href="../assets/css/index-styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
+    </head>
     
-    <!-- Estilos -->
-    <link rel="stylesheet" href="../assets/css/index-styles.css" />
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" 
-        crossorigin="anonymous"
-    />
-
-    <!-- Scripts -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" 
-        crossorigin="anonymous">
-    </script>
-</head>
 
 <body>
-    <header class="text-center py-4">
-        <img src="https://i.pinimg.com/736x/14/e4/ba/14e4bac387d6776401d02262fad7cb97.jpg" alt="Imagen de cabecera" class="img-fluid" />
-        <h1 class="mt-3">Nicolas L.</h1>
+    <header>
     </header>
 
-    <nav class="text-center py-3">
+    <nav class="py-3">
         <ul class="list-inline m-0">
             <li class="list-inline-item mx-3"><a href="#perfil">Descripción</a></li>
             <li class="list-inline-item mx-3"><a href="#skills">Habilidades</a></li>
             <li class="list-inline-item mx-3"><a href="#projects">Proyectos</a></li>
-            <li class="list-inline-item mx-3"><a href="#contact">Contacto</a></li>
         </ul>
     </nav>
 
     <main class="container py-4">
-        <section class="hero">
-            <blockquote class="blockquote">
-                <p>"El cielo es el punto de inicio"</p>
-            </blockquote>
+        <section class="home" id="home">
+            <div class="home-img">
+                <img src="https://images.steamusercontent.com/ugc/2014846607505772776/734F79886F900870EC448D4698CF7E93C77ACAC7/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Foto de perfil">
+            </div>
+
+            <div class="home-content">
+                <h1>Hola, soy <span>Nicolas Lagos</span></h1>
+                <h3 class="typing-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos magni in saepe, ducimus beatae rerum quod optio consequuntur sed dolorum maxime omnis, adipisci molestias laboriosam molestiae quidem? Doloribus, numquam soluta?</h3>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <a href="#contact" class="btn">Contactame!</a>
+            </div>
         </section>
 
-        <section id="perfil" class="mb-5">
-            <h2>Descripción</h2>
-            <p>Estudiante del Técnico Universitario en Informática, con aspiraciones en diseño web.</p>
+        <section class="education" id="education">
+            <h2 class="heading">Mis<span>Estudios</span></h2>
+            <div class="timeline">
+                <div class="container right">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container left">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>                
+                <div class="container right">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>                
+                <div class="container left">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>                
+                <div class="container left">
+                    <div class="content">
+                        <div class="tag">
+                            <h2>Semana 6</h2>
+                        </div>
+                        <div class="decs">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ducimus dignissimos ipsam consequatur sunt ab, veritatis beatae architecto tempora eos atque exercitationem vero similique dicta. Quod quasi saepe totam sed.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="skills" class="mb-5">
@@ -64,7 +134,7 @@
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="/Portafolio-uct/assets/images/turismo.png" alt="Imagen del proyecto Turismo Umbrella" />
+                        <img class="card-img-top" src="/assets/images/turismo.png" alt="Imagen del proyecto Turismo Umbrella" />
                         <div class="card-body">
                             <h3 class="card-title">Turismo Umbrella</h3>
                             <a href="https://fabulous-wisp-a82223.netlify.app/" class="btn btn-primary mt-2">Ver Proyecto</a>
@@ -73,7 +143,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="/Portafolio-uct/assets/images/landing.png" alt="Imagen del proyecto Landing Page" />
+                        <img class="card-img-top" src="/assets/images/landing.png" alt="Imagen del proyecto Landing Page" />
                         <div class="card-body">
                             <h3 class="card-title">Landing Page</h3>
                             <a href="https://teclab.uct.cl/~nicolas.lagos/landing/templates/" class="btn btn-primary mt-2">Ver Proyecto</a>
@@ -111,6 +181,8 @@
               </div>
             </div>
           </section>
+
+          <script src="../assets/js/script.js"></script>
     </main>
 
     <footer>
